--- a/index.html
+++ b/index.html
@@ -5,24 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="https://www.bimcommunity.com/files/images/userlib/cloud1.png">
-    <title>Weather</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <title>Test</title>
 </head>
 <body>
-    
-    <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
-        <canvas class="icon" width="128" height="100"></canvas>
-        
+    <div class="nav">
+        <h4 id="logo">Malthe</h4>
+        <ul class="nav-links">
+            <li>Home</li>
+            <li>About</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </div>
-    <div class="temperature">
-        <div class="degree-section">
-        <h2 class="temperature-degree">34</h2>
-        <span>F</span>
+
+    <div class="container1">
+            <div id="filler1">
+            </div>
+        <h1>Portfolio</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima impedit ab quam nostrum deserunt sequi qui possimus eum unde, culpa, perspiciatis tempora soluta ut magnam quos? Possimus quo quibusdam quisquam?
+        </p>
     </div>
-    <div class="temperature-description">Please allow the GPS</div>
-    <div class="summaryFull">"Summary"</div>
-    <script src="skycons.js"></script>
-    <script src="app.js"></script>
+    <div class="container2">
+            <div id="filler1">
+                </div>
+            <h1>Who am i?</h1>
+    </div>
+    <div class="container3">
+            <div id="filler1">
+                </div>
+            <h1>My projects</h1>
+    </div>
+    <div class="container4">
+            <div id="filler1">
+                </div>
+            <h1>Contact me</h1>
+    </div>
+
+    <script src="./app.js"></script>
 </body>
 </html>
